Revert "Merge branch 'main' of https://github.com/Bautist1000/SEP7"
This reverts commit 1dab379b945eeaa44ece2e5aadf780f80779f583, reversing
changes made to 0c7c41c4a6a22eb30b22b5dc077cdefccd063519.

--- a/AquAnalyzerWebApp/Components/Layout/MainLayout.razor
+++ b/AquAnalyzerWebApp/Components/Layout/MainLayout.razor
@@ -6,14 +6,9 @@
     <title>AquAnalyzer</title>
 </HeadContent>
 <div class="main-container">
-    <header>
-        <NavMenu />
-    </header>
-
-    <div class="main-content">
-        <div class="container-fluid p-4">
-            @Body
-        </div>
+    <NavMenu />
+    <div class="content">
+        @Body
     </div>
     <footer class="footer">
         <div class="footer-content">
